<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".FasilitasActivity">
    
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_lab_komputer"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/lab_komputer"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lab Komputer"
                        android:layout_alignBottom="@id/iv_lab_komputer"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_centerHorizontal="true"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/labkom"
                        android:textSize="15sp"
                        android:layout_below="@id/iv_lab_komputer"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_lab_ipa"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/lab_ipa"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lababoratorium"
                        android:layout_alignBottom="@id/iv_lab_ipa"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_centerHorizontal="true"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/labipa"
                        android:textSize="15sp"
                        android:layout_below="@id/iv_lab_ipa"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_perpustakaan"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/perpustakaan"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Perpustakaan"
                        android:layout_alignBottom="@id/iv_perpustakaan"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_centerHorizontal="true"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/perpus"
                        android:textSize="15sp"
                        android:layout_below="@id/iv_perpustakaan"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_masjid"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/masjid"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Masjid"
                        android:layout_alignBottom="@id/iv_masjid"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_centerHorizontal="true"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/masjid"
                        android:textSize="15sp"
                        android:layout_below="@id/iv_masjid"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>